[gd_scene load_steps=28 format=3 uid="uid://cf3c6uac67ave"]

[ext_resource type="Texture2D" uid="uid://b16fk7bd4hftb" path="res://Assets/Sprites/Backgrounds/level1.png" id="1_5o1yw"]
[ext_resource type="Script" path="res://Scenes/Levels/Level1/level_manager.gd" id="1_6kdva"]
[ext_resource type="AudioStream" uid="uid://drvyjsgkkebw" path="res://Assets/Sounds/Themes/stage_1.wav" id="1_nnndp"]
[ext_resource type="PackedScene" uid="uid://cgj1c856i77vv" path="res://Scenes/GameObject/Player/player.tscn" id="2_exma6"]
[ext_resource type="Script" path="res://Scenes/Levels/Level1/action_manager.gd" id="2_i03tu"]
[ext_resource type="Script" path="res://Scenes/Levels/Level1/state_manager.gd" id="2_kksd3"]
[ext_resource type="Script" path="res://Scenes/Levels/Level1/act_manager.gd" id="3_cuacp"]
[ext_resource type="PackedScene" uid="uid://bamer6ekrck24" path="res://Scenes/GameObject/Human/human.tscn" id="3_greyo"]
[ext_resource type="PackedScene" uid="uid://60hf1qtqp41i" path="res://Scenes/UI/Fight/action_buttons.tscn" id="3_iheqm"]
[ext_resource type="Script" path="res://Scenes/Levels/Level1/attack_manager.gd" id="4_f5y6i"]
[ext_resource type="PackedScene" uid="uid://bqxe6miljlrwe" path="res://Scenes/UI/Fight/act_choice_buttons.tscn" id="5_fh83f"]
[ext_resource type="Resource" uid="uid://bilyvtfxb8ukv" path="res://Resources/ActChoices/Level1/phase_1.tres" id="5_lbuu2"]
[ext_resource type="Resource" uid="uid://dket0x5q8ahc0" path="res://Resources/ActChoices/Level1/phase_2.tres" id="7_hayja"]
[ext_resource type="PackedScene" uid="uid://b0wu4e6emajaq" path="res://Scenes/GameObject/Attacks/Level1/Attack1/attack_1.tscn" id="7_kix4b"]
[ext_resource type="PackedScene" uid="uid://gq78seqt4kjp" path="res://Scenes/GameObject/Attacks/Level1/Attack2/attack_2.tscn" id="8_4e0yc"]
[ext_resource type="Resource" uid="uid://0heis7gtirr1" path="res://Resources/ActChoices/Level1/phase_3.tres" id="8_xr8x0"]
[ext_resource type="PackedScene" uid="uid://c85x7cck0ljy7" path="res://Scenes/GameObject/Attacks/Level1/Attack3/attack_3.tscn" id="9_l4ioe"]
[ext_resource type="PackedScene" uid="uid://cfqw6qn8syvwk" path="res://Scenes/GameObject/Battle/battle_box.tscn" id="10_qr5a0"]
[ext_resource type="PackedScene" uid="uid://b7crd40aenn2t" path="res://Scenes/GameObject/Player/battle_player.tscn" id="11_irlci"]
[ext_resource type="PackedScene" uid="uid://bofdqjbwksn7d" path="res://Scenes/GameObject/Attacks/Level1/Attack4/attack_4.tscn" id="14_saqwq"]
[ext_resource type="PackedScene" uid="uid://t7jllache8ae" path="res://Scenes/UI/Fight/player_info.tscn" id="15_uistj"]

[sub_resource type="Animation" id="Animation_pve0s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroCover:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.172549, 0.188235, 0.184314, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(200, 300)]
}

[sub_resource type="Animation" id="Animation_1pll0"]
resource_name = "enter_battle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.164706, 0.164706, 0.164706, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2.5, 1),
"update": 0,
"values": [Vector2(200, 300), Vector2(-100, 300)]
}

[sub_resource type="Animation" id="Animation_a777u"]
resource_name = "exit_battle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [Color(0.164706, 0.164706, 0.164706, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2.5, 1),
"update": 0,
"values": [Vector2(-100, 300), Vector2(200, 300)]
}

[sub_resource type="Animation" id="Animation_2we2q"]
resource_name = "intro_sequence"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroCover:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(7.5, 8),
"transitions": PackedFloat32Array(0.353553, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LevelManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(7.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handle_intro_finished"
}]
}

[sub_resource type="Animation" id="Animation_bf7it"]
resource_name = "no_intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroCover:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LevelManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handle_intro_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lkf55"]
_data = {
"RESET": SubResource("Animation_pve0s"),
"enter_battle": SubResource("Animation_1pll0"),
"exit_battle": SubResource("Animation_a777u"),
"intro_sequence": SubResource("Animation_2we2q"),
"no_intro": SubResource("Animation_bf7it")
}

[node name="Level1" type="Node2D"]

[node name="LevelManager" type="Node" parent="." node_paths=PackedStringArray("enemy_body", "attack_manager", "action_manager", "act_manager", "state_manager")]
script = ExtResource("1_6kdva")
enemy_body = NodePath("../Human")
attack_manager = NodePath("../AttackManager")
action_manager = NodePath("../ActionManager")
act_manager = NodePath("../ActManager")
state_manager = NodePath("../StateManager")

[node name="StateManager" type="Node" parent="." node_paths=PackedStringArray("attack_manager", "act_manager")]
script = ExtResource("2_kksd3")
attack_manager = NodePath("../AttackManager")
act_manager = NodePath("../ActManager")

[node name="ActManager" type="Node" parent="." node_paths=PackedStringArray("level_manager", "state_manager")]
script = ExtResource("3_cuacp")
act_choices_per_phase = Array[Resource("res://Resources/ActChoices/ActsPerPhase.gd")]([ExtResource("5_lbuu2"), ExtResource("7_hayja"), ExtResource("8_xr8x0")])
act_choice_buttons_scene = ExtResource("5_fh83f")
level_manager = NodePath("../LevelManager")
state_manager = NodePath("../StateManager")

[node name="ActionManager" type="Node" parent="." node_paths=PackedStringArray("level_manager")]
script = ExtResource("2_i03tu")
action_buttons_scene = ExtResource("3_iheqm")
level_manager = NodePath("../LevelManager")

[node name="AttackManager" type="Node" parent="." node_paths=PackedStringArray("dialog_background", "animation_player", "level_manager")]
script = ExtResource("4_f5y6i")
dialog_background = NodePath("../DialogBackground")
attack_sequence = Array[PackedScene]([ExtResource("7_kix4b"), ExtResource("8_4e0yc"), ExtResource("9_l4ioe"), ExtResource("14_saqwq")])
battle_box_scene = ExtResource("10_qr5a0")
battle_player_scene = ExtResource("11_irlci")
animation_player = NodePath("../AnimationPlayer")
level_manager = NodePath("../LevelManager")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.172549, 0.188235, 0.184314, 1)
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("1_5o1yw")
expand_mode = 2

[node name="Player" parent="." instance=ExtResource("2_exma6")]
position = Vector2(200, 300)

[node name="Human" parent="." instance=ExtResource("3_greyo")]
position = Vector2(57, -81)

[node name="BattleArea" type="Node2D" parent="." groups=["battle_area_layer"]]
y_sort_enabled = true

[node name="Entities" type="Node2D" parent="." groups=["entities_layer"]]

[node name="PlayerInfo" parent="." instance=ExtResource("15_uistj")]
offset_right = 1280.0
offset_bottom = 50.0

[node name="DialogBackground" type="ColorRect" parent="."]
offset_top = 560.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="IntroCover" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_nnndp")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lkf55")
}
autoplay = "no_intro"
